# a2a-examples

./: .gitignore  A2A_DEVELOPMENT_CHECKLIST.md  MCP_SERVER_DEVELOPMENT_CHECKLIST.md  MCP_USAGE_SCENARIOS.md
a2a-multi-agent-keda-scaling/: .env.example  .gitignore  DEMO.md  README.md  SETUP-GUIDE.md  pyproject.toml  requirements.txt
a2a-multi-agent-keda-scaling/agents/: __init__.py
a2a-multi-agent-keda-scaling/agents/common/: servicebus.py
a2a-multi-agent-keda-scaling/agents/invoice_agent/: __init__.py  agent.py  server.py
a2a-multi-agent-keda-scaling/agents/orchestrator/: agent.py  server.py
a2a-multi-agent-keda-scaling/agents/po_agent/: __init__.py  agent.py  server.py
a2a-multi-agent-keda-scaling/docker/: Dockerfile.base  Dockerfile.invoice  Dockerfile.orchestrator  Dockerfile.po  docker-compose.yml
a2a-multi-agent-keda-scaling/k8s/: configmap.yaml  invoice-agent.yaml  namespace.yaml  orchestrator.yaml  po-agent.yaml  redis.yaml  secrets.yaml
a2a-multi-agent-keda-scaling/k8s/keda/: invoice-scaledobject.yaml  po-scaledobject.yaml  trigger-auth.yaml
a2a-multi-agent-keda-scaling/scripts/: demo-load.py  setup-azure.sh
azurefoundryagent/: .env.template  .gitignore  README.md  __main__.py  foundry_agent.py  foundry_agent_executor.py  pyproject.toml  test_client.py
currencyagentdemo/: A2A_DEVELOPER_GUIDE.md  A2A_FAQ.md
currencyagentdemo/currencyagent/: __main__.py  agent_executor.py
currencyagentdemo/mcp_server/: function_app.py  requirements.txt
langgraph/: README.md  __main__.py  agent.py
mcp_servers/: MCPStdioTool.py  MCPStreamableHTTPTool.py  MCPStreamableHTTPTool_AI_Gateway.py  MCPWebsocketTool.py  sample_agent_mcp.py  test_mcp_endpoint.py
semantic-kernel/: README.md  pyproject.toml
semantic-kernel/hosts/cli/: README.md
(+2 files in other folders)
