[project]
name = "a2a-semantic-kernel"
version = "0.1.0"
description = "Leverage Semantic Kernel Agents using the A2A protocol."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "semantic-kernel>=1.30.0",
    "click",
    "a2a-sdk>=0.2.1",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "jwcrypto>=1.5.6",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "sse-starlette>=2.2.1",
    "starlette>=0.46.1",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.34.0",    
]

[tool.hatch.build.targets.wheel]
packages = ["common", "hosts", "."]

[tool.uv.sources]
a2a-samples = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
